kubernetes/apps/default/cyberchef/app/cyberchef-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cyberchef
  name: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cyberchef
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cyberchef-default: "true"
        io.kompose.service: cyberchef
    spec:
      containers:
        - image: mpepping/cyberchef:latest
          name: cyberchef
          resources: {}
      restartPolicy: Always
status: {}
