kubernetes/apps/default/cyberchef/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  enabled: true
  name: CyberChef
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    hajimari.io/icon: game-icons:cyber-eye
spec:
  ingressClassName: nginx
  rules:
    - host: &host "cyberchef.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef
                port:
                  number: 8000
  tls:
    - hosts:
        - *host
