kubernetes/apps/default/cyberchef/app/cyberchef-default-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cyberchef-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cyberchef-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cyberchef-default: "true"
